--- a/src/pages/Main/MainContent/style.scss
+++ b/src/pages/Main/MainContent/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   &_left {
     height: 720.45px;
-    overflow-y: scroll;
+    overflow-y: overlay;
     &::-webkit-scrollbar {
       width: 4px;
     }
